--- a/ManagingProducts.Web/Views/Product/Index.cshtml
+++ b/ManagingProducts.Web/Views/Product/Index.cshtml
@@ -7,10 +7,20 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Modal title</h4>
+                <h4 class="text-info">Statistic of operation</h4>
+                
             </div>
             <div class="modal-body">
-                <table id="statProduct"></table>
+                <form role="form" id="inform">
+                    <label for="productName">Product </label>
+                    <div id="productName"></div>
+                    <label for="productPrice">Price </label>
+                    <div id="productPrice"></div>
+                    <label for="totalQ"> Total quantity</label>
+                    <div id="totalQ"></div>
+                    <label for="totalP">Total price </label>
+                    <div id="totalP"></div>
+                </form>
             </div>
             <div class="modal-footer">
                 <button id="clear" type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -24,7 +34,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Statistic of operations</h4>
+                <h4 class="text-info">Statistic of operations</h4>
             </div>
             <div class="modal-body">
                 <table id="statOperation"></table>
@@ -41,7 +51,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                <h4 class="modal-title">Modal title</h4>
+                <h4 class="text-info">managing window</h4>
             </div>
             <div class="modal-body">
                 <form role="form" id="prod">
@@ -53,8 +63,7 @@
                         <label for="quantity">Quantity</label>
                         <input id="quantity" name="productQuantity" type="text" value="" class="form-control"/>
                     </div>
-
-
+                    
                     <div class="form-group">
                         <label for="typeOfOperation">type of Operation</label>
                         <select id="typeOfOperation">
@@ -93,8 +102,8 @@
             colNames: ['Id', 'Name', 'Price'],
             colModel: [
                 { name: 'Id', index: 'Id', width: 30, hidden: true, stype: 'text', key: true },
-                { name: 'Name', index: 'Name', width: 150, editable: true, edittype: 'text', editrules: { required: true }, editoptions: { size: 50 }, sortable: true },
-                { name: 'Price', index: 'Price', width: 80, editable: true, editrules: { required: true, number: true, maxValue: 10000 }, align: "right", sortable: true }
+                { name: 'Name', index: 'Name', width: 150, editable: true, editrules: { required: true }, editoptions: { maxlength: 50 }, sortable: true },
+                { name: 'Price', index: 'Price', width: 80, sorttype: "number", editable: true, editrules: { required: true, number: true, minValue: 0, maxValue: 10000 }, align: "right", sortable: true }
             ],
             rowNum: 10,
             rowList: [10, 25, 50, 100],
@@ -106,6 +115,7 @@
 
             caption: "List of prosucts",
             width: 1000
+            
         });
 
         $("#jqg").jqGrid('navGrid', '#jpager', {
@@ -129,7 +139,7 @@
             return {
                 closeAfterAdd: true,
                 height: 250,
-                width: 400,
+                width: 600,
                 closeAfterEdit: true,
                 reloadAfterSubmit: true,
                 drag: true,
@@ -158,45 +168,42 @@
             .navButtonAdd('#jpager', {
                 caption: "prod report",
                 onClickButton: function () {
-                  
-                    $('.modal').on('shown.bs.modal', function () {
-                        $(this).css("z-index", parseInt($('.modal-backdrop').css('z-index')) + 1);
-                    });
-                    $('.modal').on('shown.bs.modal', '.modal', function() {
-                        $(this).create('bs.modal');
-                    });
-                    
-                    $('#statProductModel').modal('show');
-                    var id = parseInt($('.ui-state-highlight').attr('id'));
-                    
-                    $("#statProduct").jqGrid({
-                        ajaxGridOptions: { cache: false },
-                        url: "/Product/GetStatisticProduct?id=" + id,
-                        datatype: "json",
-                        colNames: ['Product', 'Price', 'TotalQuantity', 'TotalCost'],
-                        colModel: [
-                            { name: 'Product', index: 'Product', editable: true, width: 100, edittype: 'text' },
-                            { name: 'Price', index: 'Price', width: 50, edittype: 'text', align: "right" },
-                            { name: 'TotalQuantity', index: 'TotalQuantity', width: 50, edittype: 'text' },
-                            { name: 'TotalCost', index: 'TotalCost', width: 50, edittype: 'text', align: "right" }
-                        ],
-
-                        sortName: 'Name',
-                        viewrecords: true,
-                        sortOrder: "desc",
-                        caption: "report poduct",
-                        width: 400,
-                        loadonce: false
-                    });
-                    $('.modal').on('shown.bs.modal', "#statProductModel",'.modal', function () {
-                        $(this).remove();
+                    debugger;
+                    $.ajax({
+                        type: "Get",
+                        url: "/Product/GetStatisticProduct?id=" + parseInt($('.ui-state-highlight').attr('id')),
+                        data: "json",
+                        success: function (data) {
+                            $('.modal').on('shown.bs.modal', function () {
+                                $(this).css("z-index", parseInt($('.modal-backdrop').css('z-index')) + 1);
+                            });
+                            $("#statProductModel").modal('show');
+                            $("#productName").html(data.Product);
+                            $("#productPrice").html(data.Price);
+                            $("#totalQ").html(data.TotalQuantity);
+                            $("#totalP").html(data.TotalCost);
+                        }
                     });
                 },
-                
                 position: "last"
-          
-    });
-        
+            });
+       //$(function () { $("#clear").on('click', clearModal)});
+
+       // function clearModal() {
+           
+       //         $('.modal').on("hidden.bs.modal", function (e) {
+       //             $(e.target).removeData("bs.modal").find(".modal-content").empty();
+       //         });
+       // }
+        //$(function () { $("#statProductModel").on('shown', createModal) });
+
+        //function createModal() {
+
+        //    $('.modal').on("hidden.bs.modal", function (e) {
+        //        $(e.target).create("bs.modal").find(".modal-content").fill();
+        //    });
+        //}
+
         jQuery("#jqg")
             .navGrid('#jpager', { edit: false, add: false, del: false, search: false })
             .navButtonAdd('#jpager', {
@@ -212,11 +219,11 @@
                     $("#statOperation").jqGrid({
                         url: "/Product/GetStatisticOperations?id=" + id,
                         datatype: "json",
-                        colNames: ['User', 'CreatingDate', 'TotalQuantity', 'TypeOfOperation'],
+                        colNames: ['User', 'CreatingDate', 'Quantity', 'TypeOfOperation'],
                         colModel: [
                             { name: 'User', index: 'User', editable: true, width: 100, edittype: 'text', sortable: true },
                             { name: 'CreatingDate', index: 'CreatingDate', width: 100, formatter:'date', formatoptions:{srcformat:"Y-m-d",newformat:"d-M-Y"}, edittype: 'text', align: "right", sortable: true },
-                            { name: 'TotalQuantity', index: 'TotalQuantity', width: 100, edittype: 'text', sortable: true },
+                            { name: 'Quantity', index: 'Quantity', width: 100, edittype: 'text', sortable: true },
                             { name: 'TypeOfOperation', index: 'TypeOfOperation', width: 100, edittype: 'text', align: "right", sortable: true }
                         ],
                         sortName: 'User',
@@ -224,8 +231,7 @@
                         sortOrder: "desc",
                         caption: "report operations",
                         width: 400,
-                        loadonce: false,
-                        
+                        loadonce: false
                     });
                 }
             });
@@ -243,9 +249,10 @@
                             $('.modal').on('shown.bs.modal', function() {
                                 $(this).css("z-index", parseInt($('.modal-backdrop').css('z-index')) + 1);
                             });
-                            $('#operationForm').modal('show');
+                            $("#operationForm").modal('show');
                             $("#product").html(data.Name);
                             $("#productId").attr("value", data.Id);
+                            $("#quantity").val("");
                         }
                     });
                     $.ajax({
@@ -262,6 +269,7 @@
         $(function () {
             $("#saveOperation").on('click', isAvailable);
         });
+       
         function isAvailable() {
             $.ajax({
                 type: "Get",
@@ -282,8 +290,18 @@
                                     $("#typeOfOperation option:selected").text()
                             }, function(response, status) {
                                 alert("Data: " + response + "\nStatus: " + status);
+                                
                             });
+                           
                         } else {
+                            $('.modal').on('shown.bs.modal', function () {
+                                $(this).css("z-index", parseInt($('.modal-backdrop').css('z-index')) + 1);
+                            });
+                            $('.modal').on('shown.bs.modal', '.modal', function () {
+                                $(this).create('bs.modal');
+                            });
+
+                            $("#operationForm").modal('show');
                             $("#checkQuanty").text("this product has not such quantity");
                         }
                     },
